src/test/ui/specialization/specialization-overlap.stderr
error[E0119]: conflicting implementations of trait `Foo` for type `std::vec::Vec<_>`:
  --> $DIR/specialization-overlap.rs:5:1
   |
LL | impl<T: Clone> Foo for T {}
   | ------------------------ first implementation here
LL | impl<T> Foo for Vec<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `std::vec::Vec<_>`

error[E0119]: conflicting implementations of trait `Bar` for type `(u8, u8)`:
  --> $DIR/specialization-overlap.rs:9:1
   |
LL | impl<T> Bar for (T, u8) {}
   | ----------------------- first implementation here
LL | impl<T> Bar for (u8, T) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `(u8, u8)`

error[E0119]: conflicting implementations of trait `Baz<u8>` for type `u8`:
  --> $DIR/specialization-overlap.rs:13:1
   |
LL | impl<T> Baz<T> for u8 {}
   | --------------------- first implementation here
LL | impl<T> Baz<u8> for T {}
   | ^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `u8`

error[E0119]: conflicting implementations of trait `Qux`:
  --> $DIR/specialization-overlap.rs:17:1
   |
LL | impl<T: Clone> Qux for T {}
   | ------------------------ first implementation here
LL | impl<T: Eq> Qux for T {}
   | ^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0119`.
